--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -4,10 +4,14 @@ header.main
       | Crammer
     .collapse.navbar-collapse
       ul.nav.navbar-nav
+        - if user_signed_in?
+          li.nav-item.email
+            = link_to edit_user_registration_path, class: 'nav-link'
+              = current_user.email
         li.nav-item
           - if user_signed_in?
             = link_to destroy_user_session_path, class: 'nav-link', method: :delete
               | Log out
           - else
             = link_to new_user_session_path, class: 'nav-link'
-              | Log In
+              | Log in
