--- a/app/views/classes/new.html.slim
+++ b/app/views/classes/new.html.slim
@@ -1,6 +1,6 @@
 h1 New Class
 
-= form_for @classes do |f|
+= form_for @crammer_classes, url: {action: "create"} do |f|
   .field
     = f.label :name
     br
