--- a/app/views/crammer/classes/index.html.slim
+++ b/app/views/crammer/classes/index.html.slim
@@ -1,2 +1,3 @@
-h1 Crammer::Classes#index
-p Find me in app/views/crammer/classes/index.html.slim
+h1 All Classes
+
+= render partial: 'class', collection: @crammer_classes, as: :crammer_class
