Correct the associations of placement, user and crammer_class

--- a/app/views/crammer/classes/_class.html.slim
+++ b/app/views/crammer/classes/_class.html.slim
@@ -2,4 +2,4 @@
 .crammer-class
   h4 = crammer_class.name
   p 0 Students
-  = link_to 'Delete', crammer_class_path(crammer_class.id), data: {method: :delete}
+  = link_to 'Delete', crammer_class_path(crammer_class), data: {method: :delete}
